force-app/main/default/objects/Web_Module_Pool__c/Web_Module_Pool__c.object-meta.xml
<CustomObject>
    <label>Web Module Pool</label>
    <nameField>
        <label>Web Module Pools Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Module Pools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>