force-app/main/default/objects/Web_Module_Pool__c/fields/Brugernavn__c.field-meta.xml
<CustomField>
    <fullName>Brugernavn__c</fullName>
    <label>Brugernavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>