force-app/main/default/objects/Web_Module_Pool__c/fields/Fokus_Root_BAN__c.field-meta.xml
<CustomField>
    <fullName>Fokus_Root_BAN__c</fullName>
    <label>Fokus Root BAN</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>