force-app/main/default/objects/Web_Module_Pool__c/fields/UnikId__c.field-meta.xml
<CustomField>
    <fullName>UnikId__c</fullName>
    <label>UnikId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>